--- a/src/index.html
+++ b/src/index.html
@@ -157,6 +157,14 @@
             }
         }
     </style>
+    <script>
+
+    const credentials = localStorage.getItem('jellyfin_credentials');
+    if(!credentials) {
+        localStorage.setItem('jellyfin_credentials', JSON.stringify({"Servers":[{"ManualAddress":"http://38.175.192.96:8096","LastConnectionMode":2,"Name":"jellyserver","Id":"6ef09ca2e9684da98de4ecf64f6e2a12","LocalAddress":"http://38.175.192.96:8096","DateLastAccessed":1695404551001}]}));
+    }
+
+    </script>
 </head>
 <body dir="ltr">
     <div id="reactRoot">
