--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
 
     const credentials = localStorage.getItem('jellyfin_credentials');
     if(!credentials) {
-        localStorage.setItem('jellyfin_credentials', JSON.stringify({"Servers":[{"ManualAddress":"http://38.175.192.96:8096","LastConnectionMode":2,"Name":"jellyserver","Id":"6ef09ca2e9684da98de4ecf64f6e2a12","LocalAddress":"http://38.175.192.96:8096","DateLastAccessed":1695404551001}]}));
+        localStorage.setItem('jellyfin_credentials', JSON.stringify({"Servers":[{"ManualAddress":"https://herofy.co","LastConnectionMode":2,"Name":"NAzul","Id":"6ef09ca2e9684da98de4ecf64f6e2a12","LocalAddress":"http://38.175.192.96:8096","DateLastAccessed":1695404551001}]}));
     }
 
     </script>
